Avoid overflows only in header

--- a/epicyon-profile.css
+++ b/epicyon-profile.css
@@ -993,7 +993,7 @@ aside .toggle-inside li {
     display: none;
 }
 
-div {
+div.containerHeader {
     overflow: auto;
 }
 
